# cpu-releases-map

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-cve-data.yml
data/: cves.csv  cves.json  cves.txt  summary.md
src/: constants.py  discovery.py  fetcher.py  main.py  models.py  parser.py
src/exporters/: csv_exporter.py  json_exporter.py  markdown_exporter.py  text_exporter.py
