[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpu-releases-map"
version = "1.0.0"
description = "Scraper for Oracle Critical Patch Update CVE data"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
cpu-scraper = "src.main:main"
